# python

./: 2-10_favorite_number.py  2-3_personal_message.py  2-7_stripping_names.py  2-8_file_extension_removal.py  2-9_number_eight.py  3-0_bicycles.py  3-2_greetings.py  3-5_changing_guest_list.py  3-6_more_guests.py  3-8_seeing_the_world.py  4-11_my_pizzas_your_pizzas.py  4-13_buffet.py  4-4_one_million.py  4-5_summing_a_million.py  4-6_odd_numbers.py  4-7_threes.py  4-8_cubes.py  5-11_ordinal_numbers.py  5-3_alien_colors_1.py  5-8_hello_admin.py  5-9_no_users.py  6-2_favorite_numbers.py  README.md  hello_world.py  number_lists_range_loops.py
apxml python course/: 2.1 Fundamental data types: variables.py  2.2 Numbers (Integers, Floats).py  2.3 Strings.py  2.4 Booleans.py  2.5 Arithmetic.py  2.6 Comparison.py  2.7 Logic Operators.py  2.8 Type Conversion.py  2.9 User Input.py  3.1 if Statements.py  3.2 elif and else.py  3.3 while loops.py  3.4 for loops.py  3.5 loop break and continue.py  3.6 nested control structures.py  4.1 lists.py  4.2 tuples.py  4.3 dictionaries.py  4.4 accessing and modifying dictionary data.py  4.5 sets.py  4.6 operations on sets.py  5.1 defining your own functions.py  5.2 function parameters and arguments.py  5.3 returning values from functions.py  5.4 understanding variable scope (local vs global).py  5.5 default argument values.py  5.6 docstrings: documenting functions.py  5.7 lambda functions.py  6.2 opening and closing files.py  6.3 reading data from files.py  (+11 more)
machine learning/: pyproject.toml  pytorch.py  tensor operations.py  torch and numpy.py
(+35 files in other folders)
