[project]
name = "machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.7.2",
    "jax-metal>=0.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "tensorflow>=2.20.0",
    "tensorflow-metal>=1.2.0",
    "torch>=2.8.0",
]
